--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html> 
+<head><link rel="stylesheet" href="style.css"></head>
+<body>
+  <header>Willows Cool Site</header>
+  <section>
+    <div></div></section>
+</body>
