--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
-<head><link rel="stylesheet" href="style.css"></head>
+<head> <link rel = "stylesheet" href = "style.css"> </head>
 <body>
-  <header><h1>Willows Cool Site</h1></header>
+  <header> <h1> Willows Cool Site </h1> </header>
   <section>
-    <div></div></section>
+    <div> lorem ipsum </div> </section>
 </body>
