--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
   <header> <h1> Willows Cool Site </h1> </header>
   <section>
-    <div> lorem ipsum </div> </section>
+    <div> lorem ipsum </div> 
+  <div> inso far as </div> </section>
 </body>
