--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html> 
 <head> <link rel = "stylesheet" href = "style.css"> </head>
-<body>
-  <header> <h1> Willows Cool Site </h1> </header>
-  <section>
+<body> 
+  <header> 
+    <h1> Willows Cool Site </h1> 
+  </header>
+  <section> 
     <div> lorem ipsum </div> 
-  <div> inso far as </div> </section>
+  </section>
 </body>
