--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <h1> Willows Cool Site </h1> 
   </header>
   <section> 
-    <div> lorem ipsum </div> 
+    <div> Welcome! </div> 
+    <div> This is a test site for my coding </div>
   </section>
 </body>
