--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html> 
+
 <head> <link rel="stylesheet" href="style.css"> </head>
 <body> 
   <header> 
     <h1> Willows Cool Site </h1> 
   </header>
+</body>
+
+<body>
   <section> 
     <div> Welcome! </div> 
     <div> This is a test site for my coding </div>
