--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </header>
 </body>
 
-<body>
+<body1>
   <section> 
     <div> Welcome! </div> 
     <div> This is a test site for my coding </div>
   </section>
-</body>
+</body1>
